salesforce-main/src/main/default/objects/Agent_Request__c/Agent_Request__c.object-meta.xml
<CustomObject>
    <description>A request to be considered for approval as a BPP International Agent</description>
    <label>Agent Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Agent Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>