salesforce-main/src/main/default/objects/Agent_Request__c/fields/Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Evaluated__c</fullName>
    <label>Evaluated</label>
    <type>Date</type>
</CustomField>