salesforce-main/src/main/default/objects/Agent_Request__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>