salesforce-main/src/main/default/objects/Agent_Request__c/fields/Evaluation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Reason__c</fullName>
    <label>Evaluation Reason</label>
    <type>TextArea</type>
</CustomField>