salesforce-main/src/main/default/objects/Agent_Request__c/fields/Other_Institutions__c.field-meta.xml
<CustomField>
    <fullName>Other_Institutions__c</fullName>
    <label>Other Institutions</label>
    <type>TextArea</type>
</CustomField>