salesforce-main/src/main/default/objects/Agent_Request__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>