salesforce-main/src/main/default/objects/Agent_Request__c/fields/Proposed_Countries__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Countries__c</fullName>
    <label>Proposed Countries</label>
    <type>TextArea</type>
</CustomField>